manifests/deploymentconfig-mongodb-nationalparks.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
  labels:
    app.kubernetes.io/part-of: workshop
    app.openshift.io/runtime: mongodb
    vm.kubevirt.io/name: mongodb-nationalparks
  name: mongodb-nationalparks
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    name: mongodb-nationalparks
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: mongodb-nationalparks
    spec:
      containers:
      - env:
        - name: MONGO_INITDB_ROOT_USERNAME
          valueFrom:
            secretKeyRef:
              key: database-user
              name: mongodb-nationalparks
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: mongodb-nationalparks
        - name: MONGO_INITDB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-admin-password
              name: mongodb-nationalparks
        - name: MONGO_INITDB_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: mongodb-nationalparks
        image: mongo@sha256:f493e0950c1c9b76ea0cdda9c2940c6d6360b60ac651b3e780f3eb6485e29fb0
        imagePullPolicy: IfNotPresent
        name: mongodb
        ports:
        - containerPort: 27017
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
        securityContext:
          capabilities: {}
          privileged: false
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data/db
          name: mongodb-nationalparks-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mongodb-nationalparks-data
        persistentVolumeClaim:
          claimName: mongodb-nationalparks
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - mongodb
      from:
        kind: ImageStreamTag
        name: mongodb:5.0
        namespace: openshift
      lastTriggeredImage: mongo@sha256:f493e0950c1c9b76ea0cdda9c2940c6d6360b60ac651b3e780f3eb6485e29fb0
    type: ImageChange
  - type: ConfigChange
