manifests/deploymentconfig-nationalparks.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: mongodb-nationalparks
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/openshift-roadshow/nationalparks.git
  creationTimestamp: "2023-09-09T03:45:09Z"
  generation: 34
  labels:
    app: workshop
    app.kubernetes.io/part-of: workshop
    app.openshift.io/runtime: spring-boot
    component: nationalparks
    role: backend
  name: nationalparks
spec:
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    app: workshop
    component: nationalparks
    deploymentConfig: nationalparks
    role: database
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: workshop
        component: nationalparks
        deploymentConfig: nationalparks
        role: database
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: OPENSHIFT_KUBE_PING_LABELS
          value: component=nationalparks
        - name: OPENSHIFT_KUBE_PING_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: MONGODB_SERVER_PORT
          value: "27017"
        - name: MONGODB_SERVER_HOST
          value: mongodb-nationalparks
        - name: MONGODB_USER
          value: mongodb
        - name: MONGODB_PASSWORD
          value: mongodb
        - name: MONGODB_DATABASE
          value: admin
        image: quay.io/erkanercan/nationalparks:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ws/healthz/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nationalparks
        ports:
        - containerPort: 8787
          name: debug
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8888
          name: ping
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ws/healthz/
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 20
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
