manifests/route-parksmap.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: workshop
    component: parksmap
    createdBy: parksmap-template
    role: frontend
  name: parksmap
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: parksmap
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2023-09-09T03:45:09Z"
      status: "True"
      type: Admitted
    host: parksmap-parksmap-demo.apps.jybmv5wb.eastus.aroapp.io
    routerCanonicalHostname: router-default.apps.jybmv5wb.eastus.aroapp.io
    routerName: default
    wildcardPolicy: None
